# pre-commit-tox-version-sync

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_tox_version_sync/: __init__.py  checker.py  cli.py  errors.py  pre_commit_config.py  requirements.py  tox_config.py
tests/: test_checker.py  test_cli.py
