[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-tox-version-sync"
version = "0.1.1"
description = "Check that selected pre-commit hook revs match exact tox dependency pins."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "jsh9"},
]
dependencies = [
  "packaging",
  "PyYAML",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
sync-precommit-tox-versions = "pre_commit_tox_version_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
